# embedded-intent-recognizer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
src/: CMakeLists.txt  Intent.cpp  Intent.h  IntentRecognizer.cpp  IntentRecognizer.h  main.cpp
test/: CMakeLists.txt  test.cpp
